# Game-Engine

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.backup  CMakeLists.txt.old  CMakeLists_DemoAddt.txt  CMakePresets.json  CTestTestfile.cmake  DEBUG_BUILD_SUMMARY.md  DEV_LOG_backup.md  FULL_DIFF_EVERY_LINE.txt  PORTFOLIO_SUMMARY.md  PUSH_INSTRUCTIONS.md  README.md  RENDERING_FIXES_SUMMARY.md  RHYTHM_ARENA_TODO.md  RhythmArenaAerialIntegration.md  SimpleDemo.cpp  SimpleIntegrationTest.cpp  _commit_a98f44c_CMakeLists.txt  all_commits_all_files.txt  all_commits_full_diffs.txt  all_commits_full_stats.txt  build_animation_system.bat  build_cuda.txt  build_debug.txt  build_debug_camera.bat  build_gameplay.txt  build_log.txt  build_log10.txt  build_log11.txt  build_log12.txt  build_log13.txt  build_log14.txt  build_log16.txt  build_log17.txt  build_log2.txt  build_log3.txt  build_log4.txt  (+62 more)
.agent/workflows/: test_suite.md
.github/workflows/: ci.yml  cpp-tests.yml  rendering-tests.yml
.sonarcloud/: cuda-rules.json
AAA_Development_Pipeline/: AAA_DEVELOPMENT_ROADMAP.md  Phase2_7_AdvancedParticleEffects_Integration_Example.cpp  TEST_AUTOMATION_PLAN.md
APHLAbuildartifacts/: ORGANIZATION_PLAN.md
OLD/: CMakeLists.txt.bak  all_changed_files.txt
OLD/AAA_Development_Pipeline/: IMPLEMENTATION_ROADMAP.md  Phase2_6_WallRunning_Integration_Example.cpp  TODO.md
OLD/UpdatedGameEngineNotes1/: 00_EXECUTIVE_SUMMARY.md  ASSESSMENT_AND_FIX_PLAN.md  AssetManagement.md  BuildProcess.md  FixRoadmap_Prioritized.md  GameArchitecture.md  TestFailures.md
OLD/backups/: _commit_f945dfc_CMakeLists.txt  kanmsknmska  milestone_cmake.txt  temp_milestone_cmake.txt  test_cuda.cu
OLD/internal/: COMPLETE_FILE_CHANGES.md  all_commits_files.txt  commit_summaries.txt  commits_chunk2.txt  commits_chunk3.txt  commits_last_week.txt  diagnostic_output2.txt  unique_changed_files.txt
UpdatedGameEngineNotes1/: 00_TEST_FIX_INDEX.md  BUG_TRACKER.md  DebugSystem.md  KANBAN_BOARD.md  NextSteps_Assessment.md  RenderingSystem.md  SystemAnalysis_CharacterController.md  SystemAnalysis_OrbitCamera.md  WARP_PROJECT_RULESET.md  WARP_RULES.json
animation/: CMakeLists.txt
assets/: ccs_debug.txt  gpu_debug.txt  gpu_test_2.txt  gpu_test_data.txt  gpu_test_data_fixed.txt  gpu_test_manual.txt  gpu_test_red.txt
assets/shaders/: debug_texture.frag  deferred_geometry.frag  deferred_geometry.vert  deferred_lighting.frag  deferred_lighting_simple.frag
build-vs/: CTestTestfile.cmake
build-vs/Release/: test_output.txt
cmake/: external_dependencies.cmake
docs/: AAA_Engine_Documentation.md  BUILDING_ROOFTOP_INVESTIGATION.md  BUILD_STRATEGY_ANALYSIS.md  CUDA_AAA_ENHANCEMENT_PLAN.md  Core_Systems_API.md  DEVELOPMENT_PLAN.md  DX12_RTX_INTEGRATION_STATUS.md  DX12_UNIT_TEST_STATUS.md  Full_Game_Integration_Plan.md  GAME_STATUS_AND_NEXT_STEPS.md  MASSIVE_WORLD_SCALING_PLAN.md  NVIDIA_RTX_ROADMAP.md  POLISH_AND_IMPROVEMENTS_PLAN.md  PhysX_Integration_Summary.md  RhythmArenaDiveImplementation.md  SESSION_COMPLETE.md  STREAMLINE_DLSS_INTEGRATION.md  TEST_DASHBOARD.md  WEEK1_QUICKSTART.md  WORLD_SCALE_LIMITS.md
docs/portfolio/: ANIMATION_README.md  BUGS.md  BUILD_SUCCESS_REPORT.md  CAMERA_TUNING_GUIDE.md  ENHANCED_FEATURES_SUMMARY.md  PROJECT_TODO_LIST.md  QA_PORTFOLIO.md  RHYTHM_ARENA_FEATURES.md  ROBUST_POSITION_SYSTEM.md  RhythmArenaCombatEnhancement.md  RhythmArenaCombatIntegration.md  VALIDATION_RESULTS.md  WARP.md
include/: GameEngine.h  ParticleSystem.cuh  Player.h  RhythmSystem.h  TestLevel.h
include/Animation/: AnimationResources.h  AnimationSystem.h
include/Audio/: AudioResources.h  AudioSystem.h
include/Core/: System.h
include/GameFeel/: ScreenShakeEffect.h
include/Gameplay/: EnemyAISystem.h  EnemyComponents.h  PlayerComponents.h
include/Particles/: CudaParticleSimulation.h  ParticleComponents.h
include/Physics/: CharacterController.h  CollisionDetection.h  PhysXPhysicsSystem.h  PhysicsComponents.h
include/Profiling/: Profiler.h
include/Rendering/: CameraDebugSystem.h  CudaRenderingData.h  LightingSystem.h  RenderSystem.h  ShaderProgram.h
include/Rhythm/: RhythmSystem.h
include_refactored/AI/: AIComponent.h  AISystem.h  BehaviorTree.h
include_refactored/Animation/: AnimationComponent.h  AnimationResources.h  AnimationStateMachine.h  AnimationSystem.h  BlendTree.h  BoneTransform.h  IK.h  IKSolver.h  IKSystem.h  ProceduralAnimationGenerator.h
include_refactored/Audio/: AudioComponents.h
include_refactored/Combat/: CombatMove.h  CombatSystem.h  ComboManager.h
include_refactored/Core/: ComponentManager.h  Coordinator.h  CudaCore.h  ECS_Types.h  EntityManager.h  GLMConfig.h  Logger.h  System.h  SystemManager.h  ThreadPool.h
include_refactored/Debug/: Debug.h  DebugRenderer.h  DiagnosticsSystem.h  OpenGLDebugRenderer.h
include_refactored/GameFeel/: GameFeelSystem.h
include_refactored/Gameplay/: AnimationControllerComponent.h  AnimationControllerSystem.h  CharacterFactory.h  (+10 more)
renderdoccaptures/: capture1.chrome.json
scripts/: build_debug_clang.ps1  capture_game_screenshot.ps1  run_tests.ps1  setup_dependencies.ps1  verify_ci_setup.ps1
src/: AnimationSystem.cpp  AnimationUtils.cpp  EnhancedGameMain_Full3D.cpp  FullGameMain.cpp  GameEngine.cpp  InteractiveObject.cpp  PlayerValidation.cpp  RhythmFeedbackSystem.cpp  ShaderRegistry.cpp  SimpleValidation.cpp  TestLevel.cpp  VisualAnimationDemo.cpp
src_refactored/: EnhancedGameMain.cpp  EnhancedGameMain_Full3D.cpp  PhysicsTestMain.cpp  build_log_2.txt  test_log.txt
tests/: AnimationSystemTests.cpp  BuildingGeneratorTests.cpp  CharacterControllerTests.cpp  CoreSystemsTests.cpp  D3D12MeshTests.cpp  DX12PipelineStateTests.cpp  DX12RenderPipelineTests.cpp  DX12ShaderManagerTests.cpp  EmissiveTextureTests.cpp  EnemyAITests.cpp  Full3DGameIntegrationTests.cpp  IntegrationTest.cpp  OrbitCameraTests.cpp  PhysXIntegrationTests.cpp  PlayerMovementTests.cpp  ProceduralCharacterTests.cpp  RayTracingSystemTests.cpp  RenderingSystemTests.cpp  SkyboxTests.cpp  SkyboxUtilsTests.cpp  TestRunner.cpp  ThirdPersonCameraRigTests.cpp
(+240 files in other folders)
